# facerecognition

./: README.md  pyproject.toml
api/: .env  create_database.py  db.py  execute_proc.py  server.py
api/controllers/: __init__.py  branch_controller.py  device_controller.py  employee_controller.py  schemas.py  search_controller.py
api/database/: branch.sql  device.sql  employee.sql  event.sql  schema.sql
api/hikvision_isapi_wrapper/: .env  __init__.py  event.py  fplib.py  tools.py
api/services/: branch_service.py  device_service.py  employee_service.py  event_service.py  search_service.py
test/: addBranch.sh  addDevice.sh  addEmployee.sh  addUser.sh
ui/: package.json
ui/public/: data.json  index.html
ui/src/: App.css  App.js  App.test.js  app-wrapper.jsx  index.js  theme.js
ui/src/auth/: require-auth.jsx
ui/src/components/: styled-tabs.jsx
ui/src/components/bread-crumb/: bread-crumb.jsx
ui/src/components/loader/: loader.css  loader.jsx
ui/src/components/real-time-machine-data-grid/: real-time-machine-data-grid.css  (+1 more)
ui/src/firebase/: firebase.js
ui/src/models/: dashboard-content-layout.js  line.js  microstop-chart.js  plant.js  render-type.js  shift.js
ui/src/reducers/: bread-crumb-reducer.js  breakdown-data-reducer.js  changeover-data-reducer.js  dashboard-reducer.js  delayed-dashboard-reducer.js  filter-reducer.js  loggedin-user-reducer.js  microstop-data-reducer.js  oee-accelerator-reducer.js  store.js  users-reducer.js
ui/src/services/: master-service.js  real-time-service.js  service-base.js  user-service.js
(+15 files in other folders)
