[project]
name = "facerecognition"
version = "0.1.0"
description = "facerecoginition unified software"
authors = [
    {name = "Your Name", email = "you@example.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.11,<0.116.0",
    "uvicorn>=0.34.0,<0.35.0",
    "asyncpg>=0.30.0,<0.31.0",
    "python-dotenv>=0.9.0,<2.0.0",
    "dotenv (>=0.9.9,<0.10.0)",
    "requests (>=2.32.3,<3.0.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)"
]

package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

